deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: staging
  name: suresalama-backend
spec:
  selector:
    matchLabels:
      app: suresalama-backend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: suresalama-backend
    spec:
      containers:
        - name: suresalama-backend
          image: <IMAGE>
          ports:
            - containerPort: 5000
          resources:
            limits:
              # memory: "512Mi"
              cpu: 200m
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 30
            successThreshold: 1
            tcpSocket:
              port: 5000
            timeoutSeconds: 30
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 90
            periodSeconds: 30
            successThreshold: 1
            tcpSocket:
              port: 5000
            timeoutSeconds: 30
          imagePullPolicy: Always
          # restartPullPolicy: Never

      #   volumeMounts:
      #   - name: config-volume
      #     mountPath: /secrets/config
      #     readOnly: true
      # volumes:
      # - name: config-volume
      #   configMap:
      #     name: suresalama-backend
---
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: suresalama-backend
  labels:
    app: suresalama-backend
spec:
  ports:
    - name: suresalama-backend-http
      port: 80
      targetPort: 5000
  selector:
    app: suresalama-backend
